# errfriendly

./: .gitignore  LICENSE  README.md  pyproject.toml  reproduce_variants.py  stress_test_scenario.py
docs/: API.md
examples/: demo.py
src/errfriendly/: __init__.py  ai_explainer.py  audit.py  context_collector.py  exception_graph.py  handler.py  messages.py  models.py  warning_handler.py
tests/: test_example.py  test_v3_features.py
